--- a/dashboard.html
+++ b/dashboard.html
@@ -49,9 +49,9 @@
         </div>
         <div class="section">
             <button class="button" onclick="location.href='career.html'">Career Progress</button>
-            <button class="button" onclick="location.href='house-shop.html'">House Shop</button>
+            <button class="button" onclick="location.href='house_shop.html'">House Shop</button>
             <button class="button" onclick="location.href='romance.html'">Romance</button>
-            <button class="button" onclick="location.href='find-users.html'">Find Other Users</button>
+            <button class="button" onclick="location.href='find_users.html'">Find Other Users</button>
             <button class="button" onclick="logout()">Log Out</button>
         </div>
     </div>
